fix(cookieBanner): increase z-index for Cookie Banner to ensure visibility

--- a/src/components/CookieBanner/CookieBanner.scss
+++ b/src/components/CookieBanner/CookieBanner.scss
@@ -2,7 +2,7 @@
 
 .cookie-banner-wrapper {
   position: fixed;
-  z-index: 9999;
+  z-index: 999999999;
   background-color: #ffffff;
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.18);
   overflow: hidden;
